results/scraper/gitlab/issues_text/target_missing/host_missing/accel_missing/1553
Build error: implicit declaration of function 'qemu_close_to_socket'
Description of problem:
When build the latest master code with MSYS2 on Windows 10, GCC reports:
../ui/spice-core.c: In function 'watch_remove':
../ui/spice-core.c:152:5: error: implicit declaration of function 'qemu_close_to_socket' [-Werror=implicit-function-declaration]
  152 |     qemu_close_to_socket(watch->fd);
      |     ^~~~~~~~~~~~~~~~~~~~
../ui/spice-core.c:152:5: error: nested extern declaration of 'qemu_close_to_socket' [-Werror=nested-externs]
Steps to reproduce:
1. ./configure --enable-sdl --enable-gtk --target-list=arm-softmmu,aarch64-softmmu
2. cd build
3. make
